--- a/finance/src/Stats.css
+++ b/finance/src/Stats.css
@@ -11,7 +11,7 @@
 
     flex-direction: column;
     flex: 1;
-    background-color: lightslategray;
+    background-color: 	#3e3e42;
     border-radius: 5px;
     border: 1px solid grey;
 
@@ -24,7 +24,7 @@
     align-items: center;
     justify-content: space-between;
     display: flex;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgb(40, 38, 38);
     padding: 20px 20px 10px 20px;
     font-weight: 500;
 }
